tests/conformance/syntax/positive/import_basic_valid.ditt
module Syntax.ImportBasic where

import Std.Category
postulate C : Cat
id (x : C) : C = x
