tests/conformance/syntax/negative/import_basic_invalid.ditt
module Syntax.ImportBasicBad where

import
postulate C : Cat
id (x : C) : C = x
